refactor. add rabbitmq and move save app logi in app-service

--- a/app-service/src/main/resources/application.properties
+++ b/app-service/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=mail-sender-service
+spring.application.name=app-service
+
+minio.endpoint: ${MINIO_URL:http://minio:9000}
+minio.accessKey: ${MINIO_ACCESS_KEY:admin}
+minio.secretKey: ${MINIO_SECRET_KEY:12345678}
+
+#rabbitmq.jms.url=${RABBITMQ_JMS_URL:amqp://rabbitmq:5672}
+
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+rabbitmq.username=${RABBITMQ_USERNAME:admin}
+rabbitmq.password=${RABBITMQ_PASSWORD:12345678}
+
+spring.jms.listener.concurrency=5
