--- a/app-service/build.gradle
+++ b/app-service/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.djeno'
 version = '0.0.1-SNAPSHOT'
-description = 'mail-sender-service'
+description = 'app-service'
 
 java {
     toolchain {
@@ -32,6 +32,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation 'io.minio:minio:8.5.17'
+
+    implementation 'org.springframework:spring-jms'
+    implementation 'com.rabbitmq.jms:rabbitmq-jms:3.0.0'
 }
 
 tasks.named('test') {
