--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  backend:
+  main-service:
     build:
-      context: ./
+      context: ./main-service/
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
@@ -10,13 +10,38 @@ services:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - MINIO_URL=http://minio:9000
+      - MINIO_ACCESS_KEY=admin
+      - MINIO_SECRET_KEY=12345678
+      - RABBITMQ_JMS_URL=amqp://rabbitmq:5672
+      - RABBITMQ_USERNAME=admin
+      - RABBITMQ_PASSWORD=12345678
     depends_on:
-      - db
-      - minio
+      rabbitmq:
+        condition: service_healthy
     networks:
       - app-network
     volumes:
       - ./data:/app/data
+
+  app-service:
+    build:
+      context: ./app-service/
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8080"
+    environment:
+      - MINIO_URL=http://minio:9000
+      - MINIO_ACCESS_KEY=admin
+      - MINIO_SECRET_KEY=12345678
+      - RABBITMQ_JMS_URL=amqp://rabbitmq:5672
+      - RABBITMQ_USERNAME=admin
+      - RABBITMQ_PASSWORD=12345678
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - app-network
 
   db:
     image: postgres:latest
@@ -29,6 +54,22 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+  rabbitmq:
+    image: rabbitmq:3.13-management
+    ports:
+      - "5672:5672"
+      - "15672:15672" # веб-консоль RabbitMQ
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=12345678
+    healthcheck:
+      test: [ "CMD", "rabbitmq-diagnostics", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     networks:
       - app-network
 
