--- a/main-service/Dockerfile
+++ b/main-service/Dockerfile
@@ -2,28 +2,8 @@ FROM openjdk:17-jdk-slim
 
 WORKDIR /app
 
-COPY build/libs/Lab1-0.0.1-SNAPSHOT.jar app.jar
+COPY build/libs/main-service-0.0.1-SNAPSHOT.jar main-service.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
-
-#FROM openjdk:17-jdk-slim AS build
-#
-#WORKDIR /app
-#
-#COPY . .
-#
-#RUN chmod +x gradlew
-#
-#RUN ./gradlew build --no-daemon
-#
-#FROM openjdk:17-jdk-slim
-#
-#WORKDIR /app
-#
-#COPY --from=build /app/build/libs/backend-0.0.1-SNAPSHOT.jar app.jar
-#
-#EXPOSE 8080
-#
-#ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "main-service.jar"]
