--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Lab1
+spring.application.name=main-service
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -9,13 +9,12 @@ spring.datasource.password=postgres
 
 # http://minio:9000
 # http://localhost:9000
-minio.endpoint=http://minio:9000
-minio.accessKey=admin
-minio.secretKey=12345678
+minio.endpoint: ${MINIO_URL:http://minio:9000}
+minio.accessKey: ${MINIO_ACCESS_KEY:admin}
+minio.secretKey: ${MINIO_SECRET_KEY:12345678}
 
 token.signing.key=Q29tcGxleFZlcnlTZWNyZXRLZXlGb3JKV1Q=Q29tcGxleFZlcnlTZWNyZXRLZXlGb3JKV1Q=
 
-# XML ???? ??? ?????????????
 users.xml.path=/app/data/users.xml
 
 spring.servlet.multipart.enabled=true
@@ -25,9 +24,22 @@ server.tomcat.max-swallow-size=150MB
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
+#logging.level.org.springframework.security=DEBUG
+#logging.level.com.atomikos=INFO
+#logging.level.com.atomikos.jdbc=INFO
+#logging.level.org.apache.qpid.jms=INFO
+#logging.level.org.springframework.jms=INFO
+#logging.level.org.springframework.transaction=INFO
 
-logging.level.org.springframework.security=DEBUG
+# rabbitmq.jms.url=${RABBITMQ_JMS_URL:amqp://rabbitmq:5672}
 
-logging.level.com.atomikos=DEBUG
-logging.level.com.atomikos.jdbc=DEBUG
-logging.level.org.springframework.transaction=DEBUG
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+rabbitmq.username=${RABBITMQ_USERNAME:admin}
+rabbitmq.password=${RABBITMQ_PASSWORD:12345678}
+
+spring.jms.pub-sub-domain=false
+spring.jms.listener.acknowledge-mode=auto
+spring.jms.listener.concurrency: 5
+
+
