feat. add payment method yookassa

--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -42,4 +42,7 @@ spring.jms.pub-sub-domain=false
 spring.jms.listener.acknowledge-mode=auto
 spring.jms.listener.concurrency: 5
 
+yookassa.shopId=1160006
+yookassa.apiKey=test_mJPCjjt3BYvqcI3E0mF8wGA8eTYIgZ8OsyV53xd1LpQ
+
 
