--- a/main-service/build.gradle
+++ b/main-service/build.gradle
@@ -48,11 +48,14 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
     implementation 'io.minio:minio:8.5.17'
+
     // RabbitMQ
     implementation 'org.springframework:spring-jms'
     implementation 'com.rabbitmq.jms:rabbitmq-jms:3.0.0'
-//    implementation 'jakarta.jms:jakarta.jms-api:3.1.0'
-//    implementation 'org.apache.qpid:qpid-jms-client:2.3.0'
+
+    // JCA
+    implementation 'jakarta.resource:jakarta.resource-api:2.1.0'
+
 }
 
 tasks.named('test') {
